# mobell

./: .gitignore  CHANGELOG.md  PRIVACY_POLICY.md  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
app/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts
app/release/: app-release.apk
app/src/androidTest/java/com/kvaster/mobell/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio_queue.h  audio_recorder.cpp  audio_recorder.h  com_kvaster_mobell_MxpegNative.h  mxpeg_native.cpp  mxpeg_renderer.cpp  mxpeg_renderer.h
app/src/main/java/com/kvaster/mobell/: AboutActivity.java  AndroidUtils.java  AppPreferenceActivity.java  AppPreferences.java  AudioRecorderListener.java  BattteryOptimizationPreference.java  CallService.java  DeferredCallService.java  DefferedCallService.java  GlApp.java  GlView.java  JsonUtils.java  (+8 more)
app/src/main/res/drawable/: ic_default_size.xml  ic_door_open.xml  ic_launcher_foreground.xml  ic_mic_off.xml  ic_mic_on.xml  ic_settings.xml  ic_suppress.xml  mobell_ic_launcher_foreground.xml  mobell_ic_phone_accept.xml  mobell_ic_phone_reject.xml  mobell_ic_volume_off.xml  mobell_ic_volume_on.xml
app/src/main/res/layout/: activity_about.xml  mobell_about_page.xml  mobell_about_page_separator.xml
app/src/main/res/mipmap-anydpi-v26/: mobell_ic_launcher_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  mobell_ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/xml/: mobell_preferences.xml  preferences.xml
(+11 files in other folders)
